fixed wrapping in index view. about to redo thread view

--- a/wwwroot/css/BoardIndex.css
+++ b/wwwroot/css/BoardIndex.css
@@ -15,17 +15,27 @@ body {
 
 img {
     max-width: 90vw;
-    
+    object-fit: contain;
 }
 
 .Files {
-    max-width: 70vw;
+    max-width: 50vw;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     /*overflow: auto;*/
 }
 
+.FilesTextContainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-width: 50vw;
+}
+
 div.OpPic {
-    display: block;
-    float: left;
+    display: flex;
+    /*float: left;*/
     width: max-content;
     margin: 10px;
 }
@@ -214,7 +224,9 @@ div.OpPicExpanded {
 .PostText {
     max-width: 100vw;
     word-break: normal;
-
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .PostInfo {
